# advent-of-code-runner

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  createdays.sh  log.txt  run_rust.bash
.github/workflows/: prs.yml
2021/0/: test.sh
2021/1/: README.md  leaderboard.txt  test.sh
2021/1/io/: aoshiw.output  arionminina.output  kurainu.output  mingweisamuel.output  molenzwiebel.output  querijn.output  renkon.output  slate.output  stelar7.output
2021/1/solutions/rust/molenzwiebel/: Cargo.toml
2021/1/solutions/rust/molenzwiebel/src/: main.rs
2021/10/: README.md  test.sh
2021/10/io/: mingweisamuel.output  molenzwiebel.output  renkon.output  slate.output  stelar7.output
2021/10/solutions/rust/molenzwiebel/: Cargo.toml
2021/10/solutions/rust/molenzwiebel/.cargo/: config
2021/10/solutions/rust/molenzwiebel/src/: main.rs
2021/11/: README.md  test.sh
2021/11/io/: example2.output  mingweisamuel.output
2021/12/: README.md  test.sh
2021/12/io/: example3.input  mingweisamuel.output  stelar7.output
2021/13/: README.md  test.sh
2021/13/io/: mingweisamuel.output
2021/14/: README.md  test.sh
2021/14/io/: mingweisamuel.output  stelar7.output
2021/15/: README.md  test.sh
2021/15/io/: mingweisamuel.output
2021/16/: README.md  test.sh
2021/16/io/: mingweisamuel.input  mingweisamuel.output
2021/17/: README.md  test.sh
2021/17/io/: stelar7.output
2021/18/: README.md  test.sh
2021/18/io/: example_mag_1.output  example_mag_2.output  example_mag_3.output  example_mag_4.output  example_mag_5.output  mingweisamuel.output
2021/19/: README.md  test.sh
2021/19/io/: mingweisamuel.output
2021/2/: Day2.java  README.md  leaderboard.txt  test.sh
2021/2/io/: arionminina.output  kurainu.output  mingweisamuel.output  molenzwiebel.output  renkon.input  renkon.output  slate.input  slate.output  stelar7.output
2021/2/solutions/cmake_cpp/querijn/: CMakeLists.txt  main.cpp
2021/2/solutions/cmake_cpp/querijn/src/: one.cpp  two.cpp
2021/2/solutions/cmake_cpp/querijn/src/benchmark/: benchmark.cpp  common.hpp
2021/20/: README.md  test.sh
2021/20/io/: mingweisamuel.input  mingweisamuel.output
2021/21/: README.md  test.sh
2021/21/io/: aoshiw.output  mingweisamuel.input
2021/22/: README.md  test.sh
2021/22/io/: mingweisamuel.output
2021/23/: README.md  test.sh
2021/23/io/: mingweisamuel.output
2021/24/: test.sh
2021/25/: README.md  test.sh
2021/3/: README.md  test.sh
2021/3/io/: mingweisamuel.output  molenzwiebel.output  querijn.output  renkon.output  stelar7.output
2021/4/: README.md  test.sh
2021/4/io/: kurainu.output  mingweisamuel.output  molenzwiebel.output  querijn.output  renkon.output  (+1 more)
2021/5/: README.md  test.sh
2021/5/solutions/rust/molenzwiebel/: Cargo.toml
2021/5/solutions/rust/molenzwiebel/src/: main.rs
2021/6/: README.md  test.sh
2021/7/: README.md  test.sh
2021/8/: README.md  test.sh
2021/9/: README.md  test.sh
2022/1/: README.md  test.sh
2022/10/: README.md  test.sh
2022/11/: README.md  test.sh
2022/12/: README.md  test.sh
2022/13/: README.md  test.sh
2022/14/: README.md  test.sh
2022/15/: README.md  test.sh
2022/16/: README.md  test.sh
2022/2/: README.md  test.sh
2022/3/: README.md  test.sh
2022/4/: README.md  test.sh
2022/5/: README.md  test.sh
2022/6/: README.md  test.sh
2022/7/: README.md  test.sh
2022/8/: README.md  test.sh
2022/9/: README.md  test.sh
2023/1/: README.md  test.sh
2023/1/solutions/cpp/pseudonym117/: CMakeLists.txt  day1.hpp  main.cpp  util.hpp
2023/1/solutions/cpp/pseudonym117/utils/: CMakeLists.txt  utils.hpp
2023/10/: README.md  test.sh
2023/11/: README.md  test.sh
2023/12/: README.md  test.sh
2023/13/: README.md  test.sh
2023/14/: README.md  test.sh
2023/15/: README.md  test.sh
2023/16/: README.md  test.sh
2023/17/: test.sh
2023/19/: test.sh
2023/2/: README.md  test.sh
2023/20/: test.sh
2023/21/: test.sh
2023/22/: test.sh
2023/23/: test.sh
2023/24/: test.sh
2023/3/: README.md  test.sh
2023/3/solutions/cpp/querijn/: CMakeLists.txt  main.cpp  parse.cpp  parse.hpp
2023/3/solutions/rust/thedrone7/: Cargo.toml
2023/3/solutions/rust/thedrone7/src/: main.rs
2023/4/: README.md  test.sh
2023/5/: README.md  test.sh
2023/6/: README.md  test.sh
2023/7/: README.md  test.sh
2023/7/solutions/cpp/pseudonym117/: CMakeLists.txt  day7.hpp  main.cpp
2023/8/: README.md  test.sh
2023/9/: README.md  test.sh
2024/1/: README.md  test.sh
2024/12/: test.sh
2024/13/: test.sh
2024/14/: test.sh
2024/15/: test.sh
2024/16/: test.sh
2024/18/: test.sh
2024/2/: README.md  test.sh
2024/24/: test.sh
2024/25/: test.sh
2024/3/: README.md  test.sh
2024/4/: README.md  test.sh
2024/5/: test.sh
2024/7/: test.sh
2024/8/: test.sh
2024/9/: test.sh
lang/: benchy_build.sh  benchy_cpp.sh  c_sharp.sh  c_sharp_build.sh  cargo_rust.sh  cargo_rust_build.sh  cmake_cpp.sh  cmake_cpp_build.sh  dotnet_c_sharp.sh  dotnet_c_sharp_build.sh  elixir.sh  golang.sh  golang_build.sh  golfscript.sh  java.sh  java_build.sh  mono_c_sharp.sh  node.sh  osabie.sh  perl.sh  python3.sh  rust.sh
lang/util/: average.sh  error.sh  start.sh  stop.sh  success.sh  timeformat.sh
lang/util/bench/: CMakeLists.txt  main.cpp
leaderboards/2021/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
leaderboards/2022/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
leaderboards/2023/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  2.txt  24.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
leaderboards/2024/: 1.txt  2.txt  3.txt  4.txt
(+474 files in other folders)
