[package]
name = "totally-molenzwiebel"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
lexical-core = "0.8.2"

[profile.release]
opt-level = 3
panic = "abort"

[[bin]]
name = "out"
path = "src/main.rs"
