[package]
name = "molenzwiebel"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
bitvec = "0.22.3"

[profile.release]
opt-level = 3
panic = "abort"
lto = true

[[bin]]
name = "out"
path = "src/main.rs"