[package]
name = "thedrone7"
version = "0.1.0"
edition = "2021"
authors = ["TheDrone7 <h@thedrone7.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
scan_fmt = "0.2.6"

[profile.release]
opt-level = 3
panic = "abort"

[[bin]]
name = "out"
path = "src/main.rs"
